--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,6 @@
 language: ruby
 rvm:
-- 2.3.4
+    - 1.29.2
 
-- jruby-18mode # JRuby in 1.8 mode
-
-- jruby-19mode # JRuby in 1.9 mode
-
-- rbx-18mode
-
-- rbx-19mode
+    - jruby 
+    - 2.3.4-p301
